# ClaudeBud

./: .gitignore  CLAUDE.md  LICENSE  README.md  pyproject.toml
claudebud/: cli.py  config.py  daemon.py  detector.py  notifier.py  session.py
claudebud/static/: index.html
docs/: setup.md
tests/: test_config.py  test_daemon.py  test_detector.py  test_notifier.py  test_session.py
