[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "claudebud"
version = "0.1.0"
description = "Monitor and control Claude Code CLI sessions from your phone"
readme = "README.md"
requires-python = ">=3.8"
license = { text = "MIT" }
keywords = ["claude", "claude-code", "ai", "terminal", "pwa", "notifications"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: User Interfaces",
    "Topic :: Terminals",
]
dependencies = [
    "fastapi>=0.100.0",
    "uvicorn[standard]>=0.23.0",
    "httpx>=0.24.0",
    "pywebpush>=2.0.0",
    "pywinpty>=2.0.0; sys_platform == 'win32'",
]

[project.urls]
Homepage = "https://github.com/ataid/claudebud"
"Bug Tracker" = "https://github.com/ataid/claudebud/issues"

[project.scripts]
claudebud = "claudebud.cli:main"

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "respx>=0.20.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["claudebud*"]

[tool.setuptools.package-data]
claudebud = ["static/*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
